[gd_scene load_steps=11 format=3 uid="uid://ce2q8l7rfu15u"]

[ext_resource type="Script" path="res://scripts/flooper.gd" id="1_tnak7"]
[ext_resource type="Texture2D" uid="uid://cbjfp448t72j4" path="res://assets/enemies/turret.png" id="1_vuhlv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s0rb2"]
radius = 9.0

[sub_resource type="Animation" id="Animation_m44ol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6fbl1"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hqlqm"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_mq16v"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 8, 1]
}

[sub_resource type="Animation" id="Animation_nbh0r"]
resource_name = "idle"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8uxf3"]
_data = {
"RESET": SubResource("Animation_m44ol"),
"attack": SubResource("Animation_6fbl1"),
"death": SubResource("Animation_hqlqm"),
"hurt": SubResource("Animation_mq16v"),
"idle": SubResource("Animation_nbh0r")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hpvb7"]
radius = 195.0

[node name="Flooper" type="StaticBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 0
script = ExtResource("1_tnak7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vuhlv")
hframes = 7
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s0rb2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8uxf3")
}

[node name="AggroRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_hpvb7")

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -12)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AggroRange" to="." method="_on_aggro_range_body_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
